syntax = "proto3";

package medical.api;

//import "scalapb/scalapb.proto";

service PatientApi {
  // Sends a greeting
  rpc Find (PatientRequest) returns (stream PatientReply) {}
  rpc Get (PatientIdRequest) returns (PatientReply) {}
}

message PatientRequest {
  string name = 1;
}
message PatientIdRequest {
  string id = 1;
}

message PatientReply {
  string id = 1;
  string name = 2;
  string paternalSurname = 3;
  string maternalSurname = 4;
}
